# skills-validation

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  coverage.rs  fixer.rs  lib.rs  llm.rs  loader.rs  main.rs  matcher.rs  skill.rs
src-tauri/src/commands/: coverage.rs  fix.rs  llm.rs  match_cmd.rs  mod.rs  read_file.rs  settings.rs  updater.rs  validate.rs  watch.rs
src/js/: app.js  coverage.js  llm.js  matcher.js  utils.js  validate.js
src/styles/: main.css
