[package]
name = "skills-validation"
version = "0.1.0"
edition = "2021"

[lib]
name = "skills_validation_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "skills-validation"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
notify = { version = "7", features = ["macos_fsevent"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
